# aliasman-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  lint  shells.info  shells.json
.github/workflows/: main.yml  requests.yml
src/: alias.rs  cli.rs  file_utils.rs  lib.rs  main.rs  proc.rs  shell_utils.rs  string_utils.rs  updateable.rs  upgrade.rs
src/cli/: commands.rs  mod.rs  program.rs
src/modules/: mod.rs  updateable.rs  upgrade.rs
src/utils/: file_utils.rs  mod.rs  print.rs  proc.rs  shell_utils.rs
tests/: main.rs
