[package]
name = "aliasman"
version = "1.2.0"
edition = "2021"
readme = "README.md"    
authors = ["Andy Garcia <agf030124@gmail.com>"]
license = "MIT"
description = """A simple tool for manage your aliasses"""
keywords = ["utility","tool", "aliasses", "alias", "linux"]
categories = ["command-line-interface","command-line-utilities","config"]
homepage = "https://github.com/garcia-andy/aliasman-rs"
repository = "https://github.com/garcia-andy/aliasman-rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ansi_rgb = "0.2.0"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
curl = "0.4.46"
dialoguer = "=0.11.0"
rgb = "0.8.48"
self_update = "=0.41.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
spinners = "4.1.1"
strum = { version = "0.26.3", features = ["derive"] }
sysinfo = "0.31.2"

[build-dependencies]
dotenv-build = "0.1.1"

[dev-dependencies]
inline_tweak = { version = "1.1.1", features = ["derive"] }

[package.metadata.deb]
maintainer = "Andy Garcia <agf030124@gmail.com>"
copyright = "2024, Andy Garcia <agf030124@gmail.com>"
license-file = "LICENSE.md"
extended-description = """A simple tool for manage your aliasses"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/release/aliasman", ".", "755"],
]
